# openslide

./: .gitignore  CMakeLists.txt  MANIFEST.in  OpenslideConfig.cmake.in  README.md  build.ps1  build.sh  config.h.in  configure.ac  openslide.pc.in  pyproject.toml  requirements.txt  setup.cfg.in  setup.py  setup.py.in
.github/workflows/: cpp.yml  linux.yml  macos.yml  python.yml  windows.yml
cmake/: vcpkg_windows.diff
cmake/modules/: FindGDK-PixBuf.cmake  FindGLIB.cmake  FindGStreamer.cmake  FindOpenJPEG.cmake  MacroFindGStreamerLibrary.cmake
cmake/vcpkg/ports/openslide/: portfile.cmake  vcpkg.json
common/: openslide-common-cmdline.c  openslide-common-fd.c
doc/: CMakeLists.txt  Doxyfile.in
java/: CMakeLists.txt  MANIFEST.MF
java/org/openslide/: OpenSlide.java  OpenSlideDisposedException.java  OpenSlideJNI.java
java/src/: openslide-jni.c
js/: binder.cpp
python/: README.md  __init__.py  __init__py.py  __version__.py.in
python/lib/: __init__.pxd  argb2rgba.c  argb2rgba.h  deepzoom-private.h  deepzoom.c  deepzoom.h  deepzoom.pxd  openslide.pxd
python/source/: CMakeLists.txt  deepzoom.pyx  openslide.pyx
src/: openslide-cache.c  openslide-cairo.h  openslide-decode-gdkpixbuf.c  openslide-decode-jp2k.c  openslide-decode-jpeg.c  openslide-decode-jpeg.h  openslide-decode-png.c  openslide-decode-sqlite.c  openslide-decode-tiff.c  openslide-decode-tifflike.c  openslide-decode-xml.c  openslide-error.c  openslide-features.h  openslide-grid.c  openslide-hash.c  openslide-hash.h  openslide-jdatasrc.c  openslide-private.c  openslide-private.h  openslide-util.c  openslide-vendor-aperio.c  openslide-vendor-generic-tiff.c  openslide-vendor-hamamatsu.c  openslide-vendor-leica.c  openslide-vendor-mirax.c  openslide-vendor-olympus.c  openslide-vendor-philips.c  openslide-vendor-sakura.c  openslide-vendor-trestle.c  openslide-vendor-ventana.c  openslide.c  openslide.h  version.h  version.h.in
test/: CMakeLists.txt  driver.in  extended.c  mosaic.c  parallel.c  profile.c  symlink.c  test.c  try_open.c
